Replacing OverflowDB with CPG in-memory Graph (#226)
Co-authored-by: Wendland, Florian <florian.wendland@aisec.fraunhofer.de>