@@ -3,8 +3,6 @@ package de.fraunhofer.aisec.crymlin;
 
 import de.fraunhofer.aisec.analysis.structures.Finding;
 import de.fraunhofer.aisec.cpg.graph.declarations.VariableDeclaration;
-import org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversalSource;
-import org.apache.tinkerpop.gremlin.structure.Vertex;
 import org.checkerframework.checker.nullness.qual.NonNull;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -14,9 +12,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 class RealBotanTest extends AbstractMarkTest {
 
@@ -24,11 +20,10 @@ class RealBotanTest extends AbstractMarkTest {
 	void testSimple() throws Exception {
 		// Just a very simple test to explore the graph
 		Set<Finding> findings = performTest("real-examples/botan/streamciphers/bsex.cpp", "real-examples/botan/streamciphers/bsex.mark");
-		GraphTraversalSource t = ctx.getDatabase()
-				.getGraph()
-				.traversal();
 
-		List<Vertex> variables = t.V().hasLabel(VariableDeclaration.class.getSimpleName()).toList();
+		var graph = ctx.getGraph();
+
+		var variables = graph.getNodes().stream().filter(node -> node instanceof VariableDeclaration).collect(Collectors.toList());
 
 		assertTrue(variables.size() > 0);
 	}
